<resources>
    <string name="app_name">e_commerce</string>
    <string name="veuillez_choisir_nvotre_caf_favori">Veuillez choisir\nVotre café favori</string>
    <string name="un_caf_qui_a_du_caract_re_ncomme_vous">Un café qui a du caractère.\nComme vous.</string>
    <string name="d_marrer">Démarrer</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Nom d'utilisateur</string>
    <string name="prompt_password">Mot de passe</string>
    <string name="action_sign_in">Connexion</string>
    <string name="action_sign_in_short">Connexion</string>
    <string name="welcome">"Bienvenue !"</string>
    <string name="invalid_username">Username non valide</string>
    <string name="invalid_password">Mot de passe doit être >5 caractères</string>
    <string name="login_failed">"Connexion échouée"</string>
    <string name="rechercher_quelque_chose">Rechercher quelque chose...</string>
    <string name="cat_gories">Catégories</string>
    <string name="g_teaux_populaires">Gâteaux populaires</string>
    <string name="g_teaux_populaire">Gâteaux populaires</string>
    <string name="voit_tout">Voit tout</string>
    <string name="product_title">Product title</string>
    <string name="_99_99">99.99 €</string>
    <string name="title">title</string>
    <string name="category">Category</string>
    <string name="produits">Produits</string>
    <string name="titleProd">title</string>
    <string name="priceTxt">$-</string>
    <string name="retour">Retour</string>
    <string name="quantit">Quantité</string>
    <string name="ajouter_au_panier">Ajouter au panier</string>
</resources>