<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightCream"
    tools:context=".MainActivity" >

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginTop="48dp"
                android:layout_marginHorizontal="16dp"
                >

                <EditText
                    android:id="@+id/editTextText"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:background="@drawable/white_bg"
                    android:padding="8dp"
                    android:drawableStart="@drawable/search_icon"
                    android:drawablePadding="8dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="text"
                    android:hint="@string/rechercher_quelque_chose"
                    android:textColor="@color/darkBrown"
                    android:textColorHint="@color/darkBrown"/>

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@drawable/dark_brown"
                    android:padding="12dp"
                    android:layout_marginStart="16dp"
                    app:srcCompat="@drawable/settings" />
            </LinearLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_margin="16dp"
                android:layout_height="wrap_content">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/Banner"
                    android:layout_width="wrap_content"
                    android:layout_height="170dp"
                    android:scaleType="fitXY"
                    app:shapeAppearanceOverlay="@style/CircleImageView"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:srcCompat="@tools:sample/backgrounds/scenic" />

                <ProgressBar
                    android:id="@+id/progressBarBanner"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:indeterminateTint="@color/orange"
                    android:indeterminateTintMode="src_in"
                    app:layout_constraintBottom_toBottomOf="@+id/Banner"
                    app:layout_constraintEnd_toEndOf="@+id/Banner"
                    app:layout_constraintStart_toStartOf="@+id/Banner"
                    app:layout_constraintTop_toTopOf="@+id/Banner" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/cat_gories"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_margin="16dp"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ProgressBar
                    android:id="@+id/progressBar2"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:indeterminateTint="@color/orange"
                    android:indeterminateTintMode="src_in"
                    app:layout_constraintBottom_toBottomOf="@+id/recyclerViewCat"
                    app:layout_constraintEnd_toEndOf="@+id/recyclerViewCat"
                    app:layout_constraintStart_toStartOf="@+id/recyclerViewCat"
                    app:layout_constraintTop_toTopOf="@+id/recyclerViewCat" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerViewCat"
                    android:clipToPadding="false"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="24dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/g_teaux_populaire"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/voit_tout"
                    android:textColor="@color/black"
                    />
            </LinearLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ProgressBar
                    android:id="@+id/progressBar3"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:indeterminateTint="@color/orange"
                    android:indeterminateTintMode="src_in"
                    app:layout_constraintBottom_toBottomOf="@+id/recyclerViewPop"
                    app:layout_constraintEnd_toEndOf="@+id/recyclerViewPop"
                    app:layout_constraintStart_toStartOf="@+id/recyclerViewPop"
                    app:layout_constraintTop_toTopOf="@+id/recyclerViewPop" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerViewPop"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:clipToPadding="false"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">
<com.google.android.material.bottomnavigation.BottomNavigationView
    android:layout_width="match_parent"
    android:layout_height="70dp"
    android:layout_gravity="bottom"
    android:background="@drawable/dark_brown"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.2"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:layout_gravity="center"
                app:srcCompat="@drawable/btn_1" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:text="Explorateur"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="10sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.2"
            android:orientation="vertical">

            <ImageView
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:layout_gravity="center"
                app:srcCompat="@drawable/btn_2" />

            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:text="Panier"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="10sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.2"
            android:orientation="vertical">

            <ImageView
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:layout_gravity="center"
                app:srcCompat="@drawable/btn_3" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:text="Explorateur"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="10sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.2"
            android:orientation="vertical">

            <ImageView
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:layout_gravity="center"
                app:srcCompat="@drawable/btn_4" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:text="Mes commandes"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="10sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.2"
            android:orientation="vertical">

            <ImageView
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:layout_gravity="center"
                app:srcCompat="@drawable/btn_5" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:text="Mon compte    "
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="10sp" />
        </LinearLayout>
    </LinearLayout>
</com.google.android.material.bottomnavigation.BottomNavigationView>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</androidx.constraintlayout.widget.ConstraintLayout>